Fixed keyboard navegation

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -42,6 +42,9 @@ Add new languages:
 
 Change Log:
 
+0.2-Beta
+   - Fixed keyboard navegation, now it's better than the current Cinnamon menu.
+
 0.1- Beta
    - Initial release.
 
