--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,5 +1,5 @@
-Applet : Configurable Menu      Version      : v0.3-Beta
-O.S.   : Cinnamon               Release Date : 02 Dicember 2013.
+Applet : Configurable Menu      Version      : v0.4-Beta
+O.S.   : Cinnamon               Release Date : 03 Dicember 2013.
 Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
@@ -13,7 +13,8 @@ Skills including:
    3- Support for theme change.
    4- Enable and disable favorites.
    5- Separate power button of favorites.
-   6- And more for the future.
+   6- Different modes of view menu items.
+   7- And more for the future.
 
 This program is free software:
 
@@ -41,6 +42,12 @@ Add new languages:
   - Unsupported yet.
 
 Change Log:
+
+0.4-Beta
+   - Fixed bug in list view mode that cause lag when you change categories.
+   - Fixed bug in icon view mode when searching app.
+   - Option "allow path entry in the menu search box", now work again and it's better.
+   - Fixed some minors bugs.
 
 0.3-Beta
    - Added view items.
