--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,5 +1,5 @@
-Applet : Configurable Menu      Version      : v0.4-Beta
-O.S.   : Cinnamon               Release Date : 03 Dicember 2013.
+Applet : Configurable Menu      Version      : v0.5-Beta
+O.S.   : Cinnamon               Release Date : 07 Dicember 2013.
 Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
@@ -8,13 +8,14 @@ This is a frock of Main Cinnamon menu applet with more configurable options.
 
 Skills including:
 
-   1- Can be active OnButtonPress action instead of OnButtonRelease.
-   2- You can control the menu with scrolling the height.
-   3- Support for theme change.
-   4- Enable and disable favorites.
-   5- Separate power button of favorites.
-   6- Different modes of view menu items.
-   7- And more for the future.
+   1. Can be active OnButtonPress action instead of OnButtonRelease.
+   2. You can control the menu with scrolling the height.
+   3. Support for theme change.
+   4. Enable and disable favorites.
+   5. Separate power button of favorites.
+   6. Different modes of view menu items.
+   7. Favorites with multiple lines.
+   8. And more for the future.
 
 This program is free software:
 
@@ -46,6 +47,7 @@ Change Log:
 0.5-Beta
    - Added Dragon theme to put the categories horizontally.
    - Implementation of horizontal auto scrolling(do not exist in cinnamon).
+   - Implementation of favorites with multiple lines.
 
 0.4-Beta
    - Fixed bug in list view mode that cause lag when you change categories.
