Added horizontal test.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,5 +1,5 @@
 Applet : Configurable Menu      Version      : v0.5-Beta
-O.S.   : Cinnamon               Release Date : 07 Dicember 2013.
+O.S.   : Cinnamon               Release Date : 10 Dicember 2013.
 Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
@@ -46,8 +46,11 @@ Change Log:
 
 0.5-Beta
    - Added Dragon theme to put the categories horizontally.
+   - Added Horizontal theme to put  all horizontally.
+   - Added Dragon Inverted theme to put the favorites in left.
    - Implementation of horizontal auto scrolling(do not exist in cinnamon).
    - Implementation of favorites with multiple lines.
+   - Implementation of items multicolumn horizontal.
 
 0.4-Beta
    - Fixed bug in list view mode that cause lag when you change categories.
