--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,5 +1,5 @@
-Applet : Configurable Menu      Version      : v0.6-Beta
-O.S.   : Cinnamon               Release Date : 14 Dicember 2013.
+Applet : Configurable Menu      Version      : v0.7-Beta
+O.S.   : Cinnamon               Release Date : 15 Dicember 2013.
 Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
@@ -44,6 +44,10 @@ Add new languages:
   - Unsupported yet.
 
 Change Log:
+
+0.7-Beta
+   - Fixed a bug in the keyboard navigation, when press tab key when a component was not visible.
+   - Now you can control the size of all icons in the menu.
 
 0.6-Beta
    - Fixed several bugs.
