Added static vertical bar.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,5 +1,5 @@
 Applet : Configurable Menu      Version      : v0.7-Beta
-O.S.   : Cinnamon               Release Date : 15 Dicember 2013.
+O.S.   : Cinnamon               Release Date : 16 Dicember 2013.
 Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
@@ -48,6 +48,8 @@ Change Log:
 0.7-Beta
    - Fixed a bug in the keyboard navigation, when press tab key when a component was not visible.
    - Now you can control the size of all icons in the menu.
+   - Added Accessible theme to allow the bar like Mint menu.
+   - Added Accessible Inverted theme to allow the bar like Windows menu.
 
 0.6-Beta
    - Fixed several bugs.
