Added Mint theme.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -50,6 +50,7 @@ Change Log:
    - Now you can control the size of all icons in the menu.
    - Added Accessible theme to allow the bar like Mint menu.
    - Added Accessible Inverted theme to allow the bar like Windows menu.
+   - Added Mint theme.
 
 0.6-Beta
    - Fixed several bugs.
