--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -60,7 +60,8 @@ Change Log:
    - Time and date now appear only when you don't have any app selected in the same place of title and description.
    - Time and date can be set visible or hide.
    - Now you can select if description and title of selected app appear, also you can change the font size.
-
+   - Implementation of power buttons box to be modular.
+   - Implementation of scroll buttons class to be modular, also now allow to handle the height so much better.
 
 0.6-Beta
    - Fixed several bugs.
