Added button to control resize.

--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -4,6 +4,8 @@ Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
 
+Thanks for all contribution to: Garibaldo: https://github.com/Garibaldo
+
 This is a frock of Main Cinnamon menu applet with more configurable options.
 
 Skills including:
