--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -1,5 +1,5 @@
 Applet : Configurable Menu      Version      : v0.8-Beta
-O.S.   : Cinnamon               Release Date : 01 january 2014.
+O.S.   : Cinnamon               Release Date : 02 january 2014.
 Author : Lester Carballo Pérez  Email        : lestcape@gmail.com
 
 Website : https://github.com/lestcape/Configurable-Menu
@@ -70,6 +70,7 @@ Change Log:
    - Power Buttons have now several theme to can be selected.
    - Accessible Panel can have icons or not now.
    - Categories can have icons or not now.
+   - You can remove the Box Pointer of Menu if you want.
 
 0.7-Beta
    - Fixed a bug in the keyboard navigation, and add for more componets.
