--- a/configurableMenu@lestcape/README
+++ b/configurableMenu@lestcape/README
@@ -75,6 +75,7 @@ Change Log:
    - Hover Icon can have configurable border now.
    - Now you can align the menu to the corner.
    - When you can resize the menu, now appear a mark in the corresponding corner.
+   - Now you can put the menu in full screen mode.
 
 0.7-Beta
    - Fixed a bug in the keyboard navigation, and add for more componets.
