--- a/configurableMenu@lestcape/locale/en.po
+++ b/configurableMenu@lestcape/locale/en.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-01-11 07:11-0600\n"
+"PO-Revision-Date: 2014-01-12 18:07-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -134,8 +134,8 @@ msgid "Vertical Text"
 msgstr "Vertical Text"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
-msgid "Horizontal Icon"
-msgstr "Horizontal Icon"
+msgid "Horizontal Grid"
+msgstr "Horizontal Grid"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
 msgid "Vertical"
@@ -150,8 +150,8 @@ msgid "Vertical List"
 msgstr "Vertical List"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
-msgid "Vertical Icon"
-msgstr "Vertical Icon"
+msgid "Vertical Grid"
+msgstr "Vertical Grid"
 
 #. configurableMenu@lestcape->settings-schema.json->power-theme->options
 msgid "Horizontal List"
@@ -550,6 +550,16 @@ msgstr "Show system buttons"
 #. buttons->tooltip
 msgid "Choose whether or not to show system buttons on the menu."
 msgstr "Choose whether or not to show system buttons on the menu."
+
+#. configurableMenu@lestcape->settings-schema.json->show-removable-
+#. drives->description
+msgid "Show removable drives"
+msgstr "Show removable drives"
+
+#. configurableMenu@lestcape->settings-schema.json->show-removable-
+#. drives->tooltip
+msgid "Choose whether or not to show removable drives on the menu."
+msgstr "Choose whether or not to show removable drives on the menu."
 
 #. configurableMenu@lestcape->settings-schema.json->power-box->description
 msgid "System buttons have a box"
