--- a/configurableMenu@lestcape/locale/en.po
+++ b/configurableMenu@lestcape/locale/en.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-01-12 18:07-0600\n"
+"PO-Revision-Date: 2014-01-12 21:40-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -553,13 +553,14 @@ msgstr "Choose whether or not to show system buttons on the menu."
 
 #. configurableMenu@lestcape->settings-schema.json->show-removable-
 #. drives->description
-msgid "Show removable drives"
-msgstr "Show removable drives"
+msgid "Show removable drives on the accessible panel"
+msgstr "Show removable drives on the accessible panel"
 
 #. configurableMenu@lestcape->settings-schema.json->show-removable-
 #. drives->tooltip
-msgid "Choose whether or not to show removable drives on the menu."
-msgstr "Choose whether or not to show removable drives on the menu."
+msgid "Choose whether or not to show removable drives on the accessible panel."
+msgstr ""
+"Choose whether or not to show removable drives on the accessible panel."
 
 #. configurableMenu@lestcape->settings-schema.json->power-box->description
 msgid "System buttons have a box"
