--- a/configurableMenu@lestcape/locale/es.po
+++ b/configurableMenu@lestcape/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-01-12 18:07-0600\n"
+"PO-Revision-Date: 2014-01-12 21:40-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -571,13 +571,15 @@ msgstr "Seleccione si desea o no mostrar los botones del sistema en el menú."
 
 #. configurableMenu@lestcape->settings-schema.json->show-removable-
 #. drives->description
-msgid "Show removable drives"
-msgstr "Mostrar las unidades extraíbles"
+msgid "Show removable drives on the accessible panel"
+msgstr "Mostrar las unidades extraíbles en el panel accessible"
 
 #. configurableMenu@lestcape->settings-schema.json->show-removable-
 #. drives->tooltip
-msgid "Choose whether or not to show removable drives on the menu."
-msgstr "Seleccione si desea o no mostrar las unidades extraíbles en el menú."
+msgid "Choose whether or not to show removable drives on the accessible panel."
+msgstr ""
+"Seleccione si desea o no mostrar las unidades extraíbles en el panel "
+"accessible."
 
 #. configurableMenu@lestcape->settings-schema.json->power-box->description
 msgid "System buttons have a box"
