--- a/configurableMenu@lestcape/locale/en.po
+++ b/configurableMenu@lestcape/locale/en.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-01-12 21:40-0600\n"
+"PO-Revision-Date: 2014-01-13 23:33-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -476,8 +476,8 @@ msgstr "Choose whether or not to have a box on the control buttons."
 
 #. configurableMenu@lestcape->settings-schema.json->categories-
 #. icons->description
-msgid "Categories have icons"
-msgstr "Categories have icons"
+msgid "Show icons on the categories"
+msgstr "Show icons on the categories"
 
 #. configurableMenu@lestcape->settings-schema.json->categories-icons->tooltip
 msgid "Choose whether or not to have icons on the categories."
