--- a/configurableMenu@lestcape/locale/es.po
+++ b/configurableMenu@lestcape/locale/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Configurable Menu 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-10 14:06-0600\n"
-"PO-Revision-Date: 2014-01-19 18:23-0600\n"
+"PO-Revision-Date: 2014-01-20 17:39-0600\n"
 "Last-Translator: Lester Carballo Pérez <lestcape@gmail.com>\n"
 "Language-Team: lestcape <lestcape@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -91,6 +91,16 @@ msgstr "Tamaño de la fuente del nombre de la aplicación seleccionada:"
 msgid "Set the font size of the selected application name."
 msgstr ""
 "Establecer el tamaño de la fuente del nombre de la aplicación seleccionada:"
+
+#. configurableMenu@lestcape->settings-schema.json->menu-theme-
+#. save-button->description
+msgid "Save the layout configuration"
+msgstr "Salvar la configuración del diseño actual"
+
+#. configurableMenu@lestcape->settings-schema.json->menu-theme-
+#. save-button->tooltip
+msgid "Press this button to save the layout configuration."
+msgstr "Pulse este botón para salvar la configuración del diseño actual."
 
 #. configurableMenu@lestcape->settings-schema.json->app-title-size->units
 msgid "points"
@@ -320,7 +330,7 @@ msgstr "Accessible"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Classic"
-msgstr "Clasico"
+msgstr "Clásico"
 
 #. configurableMenu@lestcape->settings-schema.json->theme->options
 msgid "Dragon"
